--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
-url: "https://sylhare.github.io"
-title: Type on Strap # site's title
+baseurl: "/"
+url: "https://torpedocorp.github.io"
+title: torpedocorp Camel ESB # site's title
 description: "A website with blog posts and pages" # used by search engines
 
 
