--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "A website with blog posts and pages" # used by search engines
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Camel ESB ÇÑ±Û # blog's title
+  title: Camel ESB # blog's title
   avatar: assets/img/triangle.svg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
