--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,28 @@
 # SITE CONFIGURATION
 baseurl: "/"
 url: "https://torpedocorp.github.io"
-title: torpedocorp Camel ESB # site's title
+title: torpedo tech blog # site's title
 description: "A website with blog posts and pages" # used by search engines
 
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: Camel ESB 한글 # blog's title
+  title: 토피도 기술 블로그 # blog's title
   avatar: assets/img/triangle.svg
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>torpedo Camel esb <code>_config.yml</code> <br> to update this feature.</p>
+     <p>토피도 기술 블로그  </p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
 
   # Icons
   rss: true  # Make sure you created a feed.xml with feed.xml layout
-  email_address: # Full email address, e.g. "sam@example.com"
+  email_address: nayoung12@torpedo.co.kr # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
