--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>토피도 기술 블로그 & Torpedo Engineering Blog <br>Camel ESB</br></p>
+     <p>토피도 기술 블로그 & Torpedo Engineering Blog <br><br>Camel ESB</br></p>
   header_text_feature_image: assets/img/pexels/scrabble-blog.jpeg
   footer_text: >
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
